--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lamina": "^1.1.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.14"
   },
