--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.13.0",
