--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
+    "@react-three/gltfjsx": "^4.3.4",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.6.3",
     "gsap": "^3.12.7",
