--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.0",
     "@studio-freight/lenis": "^1.0.42",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.18.1",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.13.0",
     "lamina": "^1.1.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.14"
