--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
     "three": "^0.175.0",
     "three-stdlib": "^2.35.14"
