--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.7",
     "gsap-trial": "^3.13.0",
     "lamina": "^1.1.23",
+    "lucide-react": "^0.522.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
