--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-three/fiber": "^9.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
+    "compression": "^1.8.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.13.0",
@@ -42,6 +44,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.5",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
