--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lamina": "^1.1.23",
     "lodash": "^4.17.21",
     "lucide-react": "^0.522.0",
+    "maath": "^0.10.8",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
